<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.5</version>
        <relativePath/>
    </parent>

    <groupId>org.qubic</groupId>
    <artifactId>kafka-streams-services</artifactId>
    <version>0.0.9-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>event-logs-dedup</module>
        <module>tick-transactions-dedup</module>
        <module>tick-data-dedup</module>
    </modules>

    <properties>
        <java.version>21</java.version>

        <commons-collections4.version>4.5.0</commons-collections4.version>
        <commons-lang3.version>[3.20.0,)</commons-lang3.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <excludedGroups>SIT,MANUAL</excludedGroups>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
